--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
